--- a/sample.html
+++ b/sample.html
@@ -25,8 +25,8 @@
   <div id = "textdiv" class = "text">
     <nav id = "navigation" class = "text">
       <ul id = "list" class = "text">
-        <li><a href = "#" id = "home" class = "text1">HOME</a></li><br>
-        <li><a href = "#" id = "profile" class = "text1">PROFILE</a></li><br>
+        <li><a href = "#" id = "home" class = "text1">Home</a></li><br>
+        <li><a href = "#" id = "profile" class = "text1">Profile</a></li><br>
         <li><a href = "#" id = "people" class = "text1">People</a></li><br>
         <li><a href = "#" id = "contact" class = "text1">Contact</a></li><br>
         <li><a href = "#" id = "mail" class = "text1">Mail Through</a></li><br>
@@ -34,7 +34,8 @@
       </ul>
     </nav>
   </div>
-  <div>
+</div>
+    <div id = "paragraphs">
     <p id = "home1">This is a html page containing a vertical navigation bar</p>
     <p id = "profile1">(This page is created by me)<br>
       <b>FINDAY TECHNOLOGIES PVT. LTD</b><br>
@@ -83,6 +84,5 @@
           Patamata,<br>
           Vijayawada</p>
       </div>
-    </div>
 </body>
 </html>
